# FireBreath

./: CMakeLists.txt  common.sh  fb_empty.cpp  fbgen.py  firebreath.pc.in  prepmake.sh  prepmake.sh.in
cmake/: CommonPluginConfig.cmake  X11.cmake  common.cmake
examples/FBTestPlugin/X11/: projectDef.cmake
fbgen/src/X11/: projectDef.cmake
src/NpapiCore/: CMakeLists.txt
src/PluginAuto/: CMakeLists.txt
src/PluginCore/: CMakeLists.txt
src/ScriptingCore/: CMakeLists.txt
